# containerd-wasm-shims

./: Makefile
containerd-shim-slight-v1/: Cargo.toml  build.ps1  cleanup.ps1  create-pod.ps1  quickstart.md
containerd-shim-slight-v1/src/: main.rs
containerd-shim-spin/: Cargo.toml
containerd-shim-spin/src/: engine.rs
deployments/: containerd.config  installer.yaml
deployments/k8s/: all-in-one-demo.yaml  azure-vote.yaml
deployments/workloads/: workload.yaml
images/slight/: Cargo.toml  Dockerfile.windows  build.rs
