[package]
name = "http-server-lib"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = {version = "1.0", optional = true}
wit-bindgen-rust = { git = "https://github.com/fermyon/wit-bindgen-backport" }
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
slight-http-handler-macro = { git = "https://github.com/deislabs/spiderlightning", version = "0.1.0" }
slight-http-server-macro = { git = "https://github.com/deislabs/spiderlightning", version = "0.1.0" }
tracing = { version = "0.1", features = ["log"] }


[build-dependencies]
oci-tar-builder = { path = "../../../runwasi/crates/oci-tar-builder", optional = true }
tar = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
oci-spec = {  path = "../../../oci-spec-rs", optional = true }
sha256 = {version = "1.1", optional = true}
anyhow = {version = "1.0", optional = true}

[features]
default = []
oci-v1-tar = ["oci-tar-builder", "tar", "env_logger", "oci-spec", "sha256", "anyhow"]
